<?xml version="1.0"?>
<package format="2">
  <name>unitree_legged_msgs</name>
  <version>0.0.0</version>
  <description>
    unitree_legged_msgs provides messages for interaction with Unitree robots via ROS.
  </description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>MPL-2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>