<?xml version="1.0"?>
<package format="2">
  <name>a1_description</name>
  <version>0.0.0</version>
  <description>Robot description package for the Unitree A1 robot</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
</package>
